# alarm-app

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  main.cpp
appStates/: IdleState.h  PrimedState.h
domain/: Alarm.cpp  Alarm.h  AlarmContext.cpp  AlarmContext.h  AlarmManager.cpp  AlarmManager.h  PuzzleFactory.cpp  UIManager.cpp  UIManager.h
interfaces/: IAlarmStorage.h  IAppState.h  IClock.h  IInput.h  IPuzzle.h  IScreen.h  IStorage.h
puzzles/: MathPuzzle.cpp  MathPuzzle.h
src/UI/lvgl/: LvglAlarmConfigView.h  LvglAlarmListView.h  LvglHomeScreenView.h  LvglRouter.h
src/UI/presenters/: AlarmConfigPresenter.h  AlarmListPresenter.h  HomeScreenPresenter.h  Presenter.h
src/UI/views/: IAlarmConfigView.h  IAlarmListView.h  IHomeScreenView.h  IPuzzleView.h  IRingingView.h  View.h
src/appStates/: IdleState.h  PrimedState.h
src/domain/: Alarm.cpp  Alarm.h  AlarmContext.cpp  AlarmContext.h  AlarmManager.cpp  AlarmManager.h  AlarmScheduler.h  PuzzleFactory.h  UIManager.cpp  UIManager.h
src/interfaces/: IAppState.h  IClock.h  IPuzzle.h  IRouter.h  IScheduler.h  IScreen.h  ISound.h  IStorage.h  IUIWidget.h
src/puzzles/: MathPuzzle.cpp  MathPuzzle.h  RandomNumberGenerator.h
src/screens/: HomeScreen.h
src/types/: Days.cpp  Days.h  PuzzleResponse.h  PuzzleType.h  ScreenType.h  TimePoint.cpp  TimePoint.h
src/views/: IAlarmConfigView.h  IHomeScreenView.h
structs/: TimePoint.h
tests/: CMakeLists.txt
tests/domain/: Alarm.cpp  AlarmManagerTest.cpp  AlarmTest.cpp  MockAlarm.cpp  MockAlarm.h
tests/mock-interfaces/: MockClock.h  MockStorage.h
tests/types/: DaysTest.cpp  TimePointTest.cpp
types/: DayMask.h  Days.cpp  Days.h  Difficulty.h  PuzzleType.h  TimePoint.cpp  TimePoint.h
